--- a/Index.html
+++ b/Index.html
@@ -7,5 +7,11 @@
 </head>
 <body>
     <h1>Lorem ipsum dolor sit amet consectetur.</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, animi. Deleniti ipsum est iste debitis, soluta, omnis fugiat ullam ratione rem fuga dolorum corrupti molestias illo obcaecati commodi minima veniam?</p>
+    <ul>
+        <li>Home</li>
+        <li>About Us</li>
+        <li>Contact Us</li>
+    </ul>
 </body>
 </html>
